# clipshot

./: CONTRIBUTING.md  README.md  clipshot.sh  main.py  pyproject.toml
src/clipshot/: capture.py  config.py  tray.py
